--- a/css/styles.css
+++ b/css/styles.css
@@ -491,6 +491,16 @@ margin-bottom: 16px;
     width: 100%;
     height: 100%;
     background-color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open{
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 
 .modal{
@@ -519,14 +529,13 @@ margin-bottom: 16px;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    transition: background-color 250ms background-color;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-btn-icon{
-  
-}
+
 .modal-title{
     color: var(--NAVY-BLUE, #2E2F42);
     text-align: center;
+    font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -537,5 +546,83 @@ margin-bottom: 16px;
 .modal-input{
     width: 100%;
     height: 58px;
-    
+    padding-left: 38px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4); 
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+}
+
+.modal-input:focus{
+    border-color: #4D5AE5;
+}
+
+.modal-input:focus+.modal-icon{
+    fill: #4D5AE5;
+}
+
+.modal-form-btn{
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    padding: 16px 32px;
+    color: var(--WHITE, #FFF);
+    text-align: center;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.05em;
+    border-radius: 4px;
+    background-color: var(--IRIS, #4D5AE5);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    border: none;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    gap: 10px;
+    cursor: pointer;  
+}
+
+.input-wrap{
+    position: relative;
+}
+.modal-label{
+    display: block;
+    color: var(--LIGHT-SLATE, #8E8F99);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.05em;
+    margin-bottom: 4px;
+}
+.modal-field{
+    margin-bottom: 8px;
+}
+
+.modal-icon{
+    position: absolute;
+    fill: #2e2f42;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-textarea{
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    padding: 8px 16px;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.4); 
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+    resize: none;
+}
+
+..modal-textarea::placeholder{
+    color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.05em;
 }
