--- a/css/styles.css
+++ b/css/styles.css
@@ -620,9 +620,41 @@ margin-bottom: 16px;
     resize: none;
 }
 
-..modal-textarea::placeholder{
+.modal-textarea::placeholder{
     color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.05em;
+}
+
+.check-text{
+    color: var(--LIGHT-SLATE, #8E8F99);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.05em;
+    display: flex;
+    align-items: center;
+}
+
+.check-text a{
+    color: #4D5AE5;
+    text-decoration-line: underline;
+}
+.check-text-box{
+    display: block;
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    border-radius: 2px;
+    margin-right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-check:checked + .check-text > .check-text-box{
+    background-color: #404BBF;
+    border: none;
+    fill: #F4F4FD;
 }
