--- a/css/styles.css
+++ b/css/styles.css
@@ -482,6 +482,64 @@ margin-bottom: 16px;
     fill: #f4f4fd;
 }
 
+.footer-form-title{
+    color: var(--WHITE, #FFF);
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+}
+
+.footer-form{
+    display: flex;
+    gap: 24px;
+}
+
+.footer-form-input{
+    width: 264px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid var(--WHITE, #FFF);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    outline: transparent;
+    padding: 8px 16px;
+}
+
+.footer-form-input::placeholder{
+    color: var(--WHITE, #FFF);
+font-size: 12px;
+line-height: 2.0;
+letter-spacing: 0.04em;
+}
+
+.footer-form-btn{
+    min-width: 165px;
+    height: 40px;
+    display: inline-flex;
+    padding: 8px 24px;
+    color: var(--WHITE, #FFF);
+text-align: center;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.05em;
+border-radius: 4px;
+background-color: var(--IRIS, #4D5AE5);
+border: none;
+}
+.footer-form-icon{
+    fill: #FFF;
+    margin-left: 16px;
+    background-color: transparent;
+    display: inline-flex;
+    gap: 24px;
+}
+
+.footer-bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 80px;
+}
 /*<! Modal form>*/
 
 .backdrop{
@@ -494,7 +552,8 @@ margin-bottom: 16px;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .backdrop.is-open{
@@ -508,11 +567,13 @@ margin-bottom: 16px;
     min-height: 584px;
     border-radius: 4px;
     background-color: var(--DAIRY, #FCFCFC);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 24px;
+    padding: 72px 24px 24px 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn{
     background-color: #E7E9FC;
@@ -529,23 +590,27 @@ margin-bottom: 16px;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-title{
+.modal-btn:hover, .modal-btn:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.modal-title {
     color: var(--NAVY-BLUE, #2E2F42);
     text-align: center;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    margin-top: 72px;
     margin-bottom: 16px;
 }
 
 .modal-input{
     width: 100%;
-    height: 58px;
+    height: 40px;
     padding-left: 38px;
     border-radius: 4px;
     border: 1px solid rgba(46, 47, 66, 0.4); 
@@ -571,7 +636,7 @@ margin-bottom: 16px;
     text-align: center;
     font-weight: 500;
     line-height: 1.5;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.04em;
     border-radius: 4px;
     background-color: var(--IRIS, #4D5AE5);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -580,7 +645,8 @@ margin-bottom: 16px;
     justify-content: center;
     margin: 0 auto;
     gap: 10px;
-    cursor: pointer;  
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
 .input-wrap{
@@ -591,11 +657,11 @@ margin-bottom: 16px;
     color: var(--LIGHT-SLATE, #8E8F99);
     font-size: 12px;
     line-height: 1.17;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.04em;
     margin-bottom: 4px;
 }
 .modal-field{
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .modal-icon{
@@ -605,6 +671,10 @@ margin-bottom: 16px;
     top: 50%;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon:hover, .modal-icon:focus{
+    fill: #ffffff;
 }
 
 .modal-textarea{
@@ -620,20 +690,25 @@ margin-bottom: 16px;
     resize: none;
 }
 
+.modal-textarea:focus{
+    border-color: #4D5AE5;
+}
+
 .modal-textarea::placeholder{
-    color: var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+    color: rgba(46, 47, 66, 0.4);
     font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.05em;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
 }
 
 .check-text{
     color: var(--LIGHT-SLATE, #8E8F99);
     font-size: 12px;
     line-height: 1.17;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.04em;
     display: flex;
     align-items: center;
+    margin-bottom: 24px;
 }
 
 .check-text a{
@@ -641,7 +716,7 @@ margin-bottom: 16px;
     text-decoration-line: underline;
 }
 .check-text-box{
-    display: block;
+    display: inline-flex;
     width: 16px;
     height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.40);
@@ -651,7 +726,7 @@ margin-bottom: 16px;
     align-items: center;
     justify-content: center;
     fill: transparent;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-check:checked + .check-text > .check-text-box{
     background-color: #404BBF;
