--- a/css/styles.css
+++ b/css/styles.css
@@ -492,6 +492,7 @@ letter-spacing: 0.04em;
 .footer-form{
     display: flex;
     gap: 24px;
+    margin-top: 16px;
 }
 
 .footer-form-input{
@@ -535,7 +536,6 @@ border: none;
 }
 
 .footer-bottom{
-    display: flex;
     justify-content: space-between;
     align-items: center;
     margin-left: 80px;
@@ -591,6 +591,18 @@ border: none;
     justify-content: center;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn .modal-btn-icon:focus{
+    fill: #FFF;
+}
+
+.modal-btn .modal-btn-icon:hover{
+    fill: #FFF;
+}
+
+.modal-btn-icon{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover, .modal-btn:focus {
@@ -661,7 +673,7 @@ border: none;
     margin-bottom: 4px;
 }
 .modal-field{
-    margin-bottom: 16px;
+    margin-bottom: 8px;
 }
 
 .modal-icon{
@@ -688,6 +700,9 @@ border: none;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
     resize: none;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
 }
 
 .modal-textarea:focus{
@@ -702,6 +717,7 @@ border: none;
 }
 
 .check-text{
+    display: inline-flex;
     color: var(--LIGHT-SLATE, #8E8F99);
     font-size: 12px;
     line-height: 1.17;
@@ -732,4 +748,8 @@ border: none;
     background-color: #404BBF;
     border: none;
     fill: #F4F4FD;
+}
+
+.modal-check {
+    margin-bottom: 24px;
 }
