--- a/css/styles.css
+++ b/css/styles.css
@@ -189,7 +189,7 @@ background-color: var(--OCEAN, #404BBF);
 background-color: var(--OCEAN, #404BBF);
 }
 /*<!--Basic principles-->*/
-.visualy-hidden {
+.visually-hidden {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -485,8 +485,10 @@ margin-bottom: 16px;
 .footer-form-title{
     color: var(--WHITE, #FFF);
 font-size: 16px;
+font-weight: 500;
 line-height: 1.5;
-letter-spacing: 0.04em;
+letter-spacing: 0.02em;
+margin-bottom: 16px;
 }
 
 .footer-form{
@@ -519,13 +521,17 @@ letter-spacing: 0.04em;
     display: inline-flex;
     padding: 8px 24px;
     color: var(--WHITE, #FFF);
+    font-weight: 500;
 text-align: center;
 font-size: 16px;
 line-height: 1.5;
-letter-spacing: 0.05em;
+letter-spacing: 0.04em;
 border-radius: 4px;
 background-color: var(--IRIS, #4D5AE5);
 border: none;
+justify-content: center;
+align-items: center;
+cursor: pointer;
 }
 .footer-form-icon{
     fill: #FFF;
@@ -608,6 +614,7 @@ border: none;
 .modal-btn:hover, .modal-btn:focus {
     background-color: #404bbf;
     border: none;
+    fill: #FFF;
 }
 
 .modal-title {
@@ -672,8 +679,11 @@ border: none;
     letter-spacing: 0.04em;
     margin-bottom: 4px;
 }
-.modal-field{
-    margin-bottom: 8px;
+.modal-field-comment{
+    margin-bottom: 16px;
+}
+.modal-field-check{
+    margin-bottom: 24px;
 }
 
 .modal-icon{
@@ -683,10 +693,6 @@ border: none;
     top: 50%;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-icon:hover, .modal-icon:focus{
-    fill: #ffffff;
 }
 
 .modal-textarea{
@@ -722,7 +728,6 @@ border: none;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    display: flex;
     align-items: center;
     margin-bottom: 24px;
 }
@@ -738,7 +743,6 @@ border: none;
     border: 1px solid rgba(46, 47, 66, 0.40);
     border-radius: 2px;
     margin-right: 8px;
-    display: flex;
     align-items: center;
     justify-content: center;
     fill: transparent;
